@@ -15,27 +15,17 @@ public class RsaEncryption {
     private String[] decryptedBlocks;
     private String encryptedMessage;
     private String decryptedMessage;
+
     public RsaEncryption() {
         encryptionKeyGenerator = new RsaEncryptionKeyGenerator();
         publicKey = encryptionKeyGenerator.getPublicKey();
         privateKey = encryptionKeyGenerator.getPrivateKey();
     }
 
-    public String decryptMessage() {
-        decryptedBlocks = new String[encryptedBlocks.length];
-        for (int i = 0; i < decryptedBlocks.length; i++) {
-            decryptedBlocks[i] = decryptBlock(encryptedBlocks[i]);
-        }
-        decryptedMessage = "";
-        for (int i = 0; i < decryptedBlocks.length; i++) {
-            decryptedMessage += convertFromAscii(decryptedBlocks[i]);
-        }
-        return decryptedMessage;
-    }
-
+    // encrypts provided message, persists encrypted blocks array and encrypted message
     public String encryptMessage() {
         String[] blocks = new String[255];
-        int numberOfDigits = new Integer(publicKey.x).toString().length();
+        int numberOfDigits = Integer.valueOf(publicKey.x).toString().length();
         int blockSize = message.length() / numberOfDigits;
         int j = 0;
         for (int i = 0; i <= numberOfDigits; i++) {
@@ -72,15 +62,21 @@ public class RsaEncryption {
         return encryptedMessage;
     }
 
-    private String decryptBlock(String encryptedBlock) {
-        String decryptedBlock = "";
-        String[] delimitedSubBlocks = encryptedBlock.split(",");
-        for (int i = 0; i < delimitedSubBlocks.length; i++) {
-            decryptedBlock += new BigInteger(delimitedSubBlocks[i]).pow(privateKey.y).mod(new BigInteger(Integer.toString(privateKey.x))) + ",";
+    // decrypts encrypted message, persists decrypted blocks array and decrypted message
+    public String decryptMessage() {
+        decryptedBlocks = new String[encryptedBlocks.length];
+        for (int i = 0; i < decryptedBlocks.length; i++) {
+            decryptedBlocks[i] = decryptBlock(encryptedBlocks[i]);
         }
-        return decryptedBlock;
+        decryptedMessage = "";
+        for (int i = 0; i < decryptedBlocks.length; i++) {
+            decryptedMessage += convertFromAscii(decryptedBlocks[i]);
+        }
+        return decryptedMessage;
     }
 
+    // Called by encrypt message
+    // Encrypts individual ascii block
     private String encryptBlock(String asciiBlock) {
         String encryptedBlock = "";
         String[] delimitedSubBlocks = asciiBlock.split(",");
@@ -90,14 +86,29 @@ public class RsaEncryption {
         return encryptedBlock;
     }
 
+    // Called by decrypt message
+    // Decrypts individual encrypted blocks to their ascii form
+    private String decryptBlock(String encryptedBlock) {
+        String decryptedBlock = "";
+        String[] delimitedSubBlocks = encryptedBlock.split(",");
+        for (int i = 0; i < delimitedSubBlocks.length; i++) {
+            decryptedBlock += new BigInteger(delimitedSubBlocks[i]).pow(privateKey.y).mod(new BigInteger(Integer.toString(privateKey.x))) + ",";
+        }
+        return decryptedBlock;
+    }
+
+    // Called by encrypt message
+    // Converts individual message blocks to ascii
     private String convertToAscii(String block) {
         String ascii = "";
         for (int i = 0; i < block.length(); i++) {
-            ascii += (Integer.toString(((int)block.charAt(i)))) + ",";
+            ascii += (((int)block.charAt(i))) + ",";
         }
         return ascii;
     }
 
+    // Called by decrypt message
+    // Converts individual decrypted ascii code blocks to english
     private String convertFromAscii(String asciiBlock) {
         String message = "";
         String[] delimitedSubBlocks = asciiBlock.split(",");
@@ -107,6 +118,7 @@ public class RsaEncryption {
         return message;
     }
 
+    // Allow controller to set message to be encrypted
     public void setMessage(String message) {
         this.message = message;
     }
